--- a/templates/demand.html
+++ b/templates/demand.html
@@ -47,9 +47,9 @@
             <tr>
                 <th>Год</th>
                 <th>Средняя зарплата</th>
-                <th>Средняя зарплата - C++ программист</th>
+                <th>Средняя зарплата - Android-developer</th>
                 <th>Количество вакансий</th>
-                <th>Количество вакансий - C++ программист</th>
+                <th>Количество вакансий - Android-developer</th>
             </tr>
         </thead>
         <tbody>
